--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,12 +1,25 @@
 {
-    "version":2,
+    "version": 2,
     "builds": [
-        { "src": "package.json", "use": "@vercel/node" }
+      {
+        "src": "index.js",
+        "use": "@vercel/node"
+      }
     ],
     "routes": [
-        {
-            "src": "/(.*)",
-            "dest": "/"
-        }
-    ]
-}
+      {
+        "src": "/(.*)",
+        "dest": "index.js"
+      }
+    ],
+    "env": {
+      "MONGO_DB_URI": "@mongo_db_uri"
+    },
+    "build": {
+      "env": {
+        "MONGO_DB_URI": "@mongo_db_uri"
+      }
+    },
+    "regions": ["all"]
+  }
+  
